# reef

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  build.rs  codecov.yml  deny.toml
benches/: diff_perf.rs  graph.rs  highlight.rs
crates/reef-agent/: Cargo.toml
crates/reef-agent/src/: main.rs
crates/reef-agent/tests/: protocol.rs
crates/reef-app/: Cargo.toml
crates/reef-app/src/: command.rs  effect.rs  engine.rs  lib.rs  location.rs  snapshot.rs  tab.rs  tasks.rs  text_input.rs
crates/reef-app/src/app/: db.rs  files.rs  git.rs  global_search.rs  mod.rs  nav.rs  pickers.rs  preview.rs  quick_open.rs  runtime.rs  scroll.rs  search.rs  view.rs
crates/reef-app/src/features/: confirm.rs  db_preview.rs  file_clipboard.rs  file_tree.rs  find_widget.rs  global_search.rs  graph_branch_picker.rs  hosts_picker.rs  mod.rs  picker.rs  place_mode.rs  quick_open.rs  search.rs  settings.rs  tree_context_menu.rs  tree_drag.rs  tree_edit.rs
crates/reef-app/src/runtime/: async_state.rs  event.rs  mod.rs
crates/reef-app/tests/: global_search_integration.rs  nav_workspace_index.rs
crates/reef-core/: Cargo.toml
crates/reef-core/src/: diff.rs  file_ops.rs  file_tree.rs  highlight.rs  history.rs  hosts.rs  lib.rs  markdown.rs  prefs.rs  quick_open.rs  search.rs  text.rs
crates/reef-core/src/git/: mod.rs  tree.rs
crates/reef-core/src/nav/: grammars.rs  intrafile.rs  lsp.rs  mod.rs  workspace.rs
crates/reef-core/src/preview/: binary.rs  image.rs  loader.rs  mod.rs
crates/reef-git/: Cargo.toml  reef.json
crates/reef-git/benches/: graph.rs
crates/reef-git/src/: git.rs  graph.rs  lib.rs  main.rs  prefs.rs  tree.rs  watcher.rs  writer.rs
crates/reef-git/tests/: git_repo_integration.rs  graph_properties.rs  prefs_roundtrip.rs  watcher_integration.rs
crates/reef-host/: Cargo.toml
crates/reef-host/benches/: graph.rs  highlight.rs
crates/reef-host/src/: app.rs  file_tree.rs  fs_watcher.rs  git.rs  highlight.rs  lib.rs  main.rs  mouse.rs  prefs.rs  renderer.rs  toast.rs
crates/reef-host/src/git/: graph.rs  mod.rs  tree.rs
crates/reef-host/src/plugin/: manager.rs  process.rs
crates/reef-host/src/ui/: commit_detail_panel.rs  diff_panel.rs  file_panel.rs  file_preview_panel.rs  file_tree_panel.rs  git_graph_panel.rs  git_status_panel.rs  hover.rs  mod.rs  plugin_panel.rs
crates/reef-host/tests/: app_error_paths.rs  fs_watcher_integration.rs  git_graph_properties.rs  git_repo_integration.rs  plugin_handshake.rs  plugin_manager_lifecycle.rs  ui_snapshots.rs
crates/reef-host/tests/snapshots/: ui_snapshots__with_staged_and_unstaged.snap
crates/reef-io/: Cargo.toml  build.rs
crates/reef-io/src/: file_copy.rs  lib.rs  local.rs  remote.rs  target.rs
crates/reef-io/src/agent_deploy/: script.rs  ssh.rs
crates/reef-io/tests/: backend_discard_loopback.rs  backend_loopback.rs  backend_preview_loopback.rs  backend_search_loopback.rs  backend_symlink_escape.rs  backend_upload_loopback.rs  backend_writes_loopback.rs
crates/reef-sqlite-preview/: Cargo.toml
crates/reef-sqlite-preview/src/: lib.rs
crates/reef-sqlite-preview/tests/: multi_schema.rs
crates/reef-tui/: Cargo.toml
crates/reef-tui/assets/shell-integration/: bash.sh  fish.fish  zsh.sh
crates/reef-tui/benches/: diff_perf.rs  graph.rs
crates/reef-tui/src/: clipboard.rs  editor.rs  file_tree.rs  find_widget.rs  global_search.rs  graph_branch_picker.rs  hosts_picker.rs  i18n.rs  input.rs  input_edit.rs  input_edit_multi.rs  keymap.rs  lib.rs  main.rs  picker_core.rs  place_mode.rs  prefs.rs  quick_open.rs  search.rs  settings.rs  shell_integration.rs  tree_context_menu.rs  tree_edit.rs
crates/reef-tui/src/app/: mod.rs  nav.rs
crates/reef-tui/src/ui/: commit_detail_panel.rs  confirm_modal.rs  context_menu_panel.rs  db_preview.rs  diff_panel.rs  file_tree_panel.rs  find_widget_panel.rs  focus.rs  focused_preview_panel.rs  git_graph_panel.rs  git_status_panel.rs  global_search_panel.rs  graph_branch_picker_panel.rs  hosts_picker_panel.rs  hover.rs  mod.rs  mouse.rs  nav_candidates_popup.rs  quick_open_panel.rs  search_tab.rs  selection.rs  settings_panel.rs  text.rs  theme.rs
crates/reef-tui/src/ui/preview/: binary.rs  image.rs  markdown.rs  mod.rs  text.rs
crates/reef-tui/tests/: app_error_paths.rs  backend_numstat_loopback.rs  backend_osc7_loopback.rs  drag_autoscroll.rs  file_preview_image.rs  find_widget_mouse.rs  find_widget_mutex.rs  find_widget_sbs.rs  find_widget_seed.rs  focused_preview_scroll.rs  fs_watcher_integration.rs  global_search_seed.rs  nav_goto_definition.rs  nav_lsp_refine.rs  nav_workspace_index.rs  settings_input.rs  sidebar_toggle.rs  space_leader_input.rs  ui_snapshots.rs
crates/reef-tui/tests/snapshots/: ui_snapshots__binary_info_pdf.snap  ui_snapshots__db_preview_grouped_sidebar.snap  ui_snapshots__db_preview_index_detail.snap  ui_snapshots__empty_repo.snap  ui_snapshots__find_widget_on_preview.snap  ui_snapshots__graph_range_mode.snap  ui_snapshots__hosts_picker_empty.snap  ui_snapshots__hosts_picker_path_mode.snap  ui_snapshots__hosts_picker_populated.snap  ui_snapshots__image_preview_halfblocks.snap  ui_snapshots__markdown_preview.snap  ui_snapshots__place_mode.snap  ui_snapshots__search_tab_replace_open_with_excluded_row.snap  ui_snapshots__settings_page_default.snap  ui_snapshots__tree_context_menu.snap  ui_snapshots__tree_edit_row_new_file.snap  ui_snapshots__with_staged_and_unstaged.snap  ui_snapshots__with_staged_and_unstaged_light.snap
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
docs/: plugin-protocol.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: build_graph.rs  read_message.rs
scripts/: check-architecture.sh
skills/: README.md
src/: app.rs  editor.rs  file_clipboard.rs  file_selection.rs  file_tree.rs  find_widget.rs  fs_watcher.rs  git.rs  global_search.rs  graph_branch_picker.rs  hosts.rs  hosts_picker.rs  i18n.rs  images.rs  input.rs  input_edit.rs  input_edit_multi.rs  lib.rs  main.rs  markdown.rs  mouse.rs  paste_conflict.rs  picker_core.rs  place_mode.rs  prefs.rs  quick_open.rs  reveal.rs  search.rs  settings.rs  (+5 more)
(+131 files in other folders)
