[package]
name = "reef-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary     = { version = "1", features = ["derive"] }
reef-host     = { path = "../crates/reef-host" }

[[bin]]
name = "build_graph"
path = "fuzz_targets/build_graph.rs"
test = false
doc = false
bench = false

# This crate is excluded from the workspace via workspace's default-members.
# Run fuzz targets with `cargo +nightly fuzz run <target>` from this directory.
[workspace]
