[package]
name = "reef-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary     = { version = "1", features = ["derive"] }
reef          = { path = ".." }

[[bin]]
name = "build_graph"
path = "fuzz_targets/build_graph.rs"
test = false
doc = false
bench = false

# Empty `[workspace]` makes this crate its own workspace, excluding it from
# the root workspace at `../Cargo.toml`. Run fuzz targets with
# `cargo +nightly fuzz run <target>` from this directory.
[workspace]
