[package]
name = "reef-core"
version = "0.40.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
git2 = { version = "0.21.0", default-features = false }
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
infer = { version = "0.16", default-features = false }
pulldown-cmark = { version = "0.13.4", default-features = false }
reef-sqlite-preview = { path = "../reef-sqlite-preview" }
serde_json = { workspace = true }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
tree-sitter = "0.26"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-vue = { package = "tree-sitter-vue-updated", version = "0.1" }
two-face = { version = "0.5", default-features = false, features = ["syntect-fancy"] }
unicode-width = "0.2.2"
url = "2"

[dev-dependencies]
rusqlite = { version = "0.32", default-features = false, features = ["bundled"] }
tempfile = "3"
