[package]
name = "reef-core"
version = "0.41.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
git2 = { version = "0.21.0", default-features = false }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
infer = { version = "0.16", default-features = false }
pulldown-cmark = { version = "0.13.4", default-features = false }
reef-sqlite-preview = { path = "../reef-sqlite-preview" }
regex = "1"
serde_json = { workspace = true }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
tree-sitter = "0.26"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-vue = { package = "tree-sitter-vue-updated", version = "0.1" }
two-face = { version = "0.5", default-features = false, features = ["syntect-fancy"] }
unicode-width = "0.2.2"
url = "2"
nucleo-matcher = "0.3"

[dev-dependencies]
proptest = "1"
rusqlite = { version = "0.32", default-features = false, features = ["bundled"] }
test-support = { path = "../test-support" }
tempfile = "3"
