[package]
name = "reef-git"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[[bin]]
name = "reef-git"
path = "src/main.rs"

[dependencies]
reef-protocol = { path = "../reef-protocol" }
git2          = { version = "0.20.4", default-features = false }
serde_json    = { workspace = true }
unicode-width = "0.2.2"

[dev-dependencies]
tempfile     = "3"
proptest     = "1"
criterion    = { version = "0.5", features = ["html_reports"] }
git2         = { version = "0.20.4", default-features = false }
test-support = { path = "../test-support" }

[[bench]]
name = "graph"
harness = false
