[package]
name = "reef"
version = "0.41.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lints]
workspace = true

[[bin]]
name = "reef"
path = "src/main.rs"

[dependencies]
crossterm     = "0.29.0"
reef-app     = { path = "../reef-app" }
reef-core    = { path = "../reef-core" }
reef-io      = { path = "../reef-io" }
ratatui       = "0.30.0"
unicode-width = "0.2.2"
serde         = { workspace = true }
serde_json    = { workspace = true }
terminal-colorsaurus = "1.0.3"
# Image preview protocol rendering in the TUI. Decoding lives in reef-core.
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm"] }
reef-sqlite-preview = { path = "../reef-sqlite-preview" }

[dev-dependencies]
insta        = { version = "1", features = ["filters"] }
criterion    = { version = "0.5", features = ["html_reports"] }
test-support = { path = "../test-support" }
reef-app     = { path = "../reef-app", features = ["test-helpers"] }
git2          = { version = "0.21.0", default-features = false }
image         = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
# Used only to seed `.db` fixtures in integration tests for the SQLite
# preview parity. Same `bundled` flag as `reef-sqlite-preview` so the
# vendored SQLite C source is shared (no duplicate compile).
rusqlite     = { version = "0.32", default-features = false, features = ["bundled"] }
reef-proto   = { path = "../reef-proto" }
tempfile     = "3"

[[bench]]
name = "highlight"
harness = false

[[bench]]
name = "graph"
harness = false

[[bench]]
name = "diff_perf"
harness = false
