[package]
name = "test-support"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
git2          = { version = "0.20.4", default-features = false }
tempfile      = "3"
# Generate tiny image fixtures on the fly so tests for the image-preview
# branch don't ship binary PNG blobs in the repo.
image         = { version = "0.25", default-features = false, features = ["png"] }
